--- a/HelloMorning/HelloMorning.csproj
+++ b/HelloMorning/HelloMorning.csproj
@@ -30,24 +30,53 @@
   <ItemGroup>
     <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CoreAssets\Globals\Data\AlarmType.cs" />
-    <Compile Include="CoreAssets\Shared\Tools\AlarmBuilder.cs" />
-    <Compile Include="CoreAssets\Shared\Tools\EngineTools\EngineLoader.cs" />
-    <Compile Include="CoreAssets\Shared\Tools\AlarmCheck.cs" />
-    <Compile Include="CoreAssets\Shared\Tools\AlarmControl.cs" />
-    <Compile Include="CoreAssets\Shared\Tools\AlarmIO.cs" />
+    <Compile Include="CoreAssets\Classes\AlarmManager.cs" />
+    <Compile Include="CoreAssets\Data\AlarmType.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\AlarmBuilder.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\AlarmControl.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\EngineTools\EngineLoader.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\EngineTools\HTMLEngineWrapper.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\TimeTools.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\AlarmStack.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\AlarmUtils.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\EngineTools\HTMLTools.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\MiscTools.cs" />
+    <Compile Include="CoreAssets\Classes\Tools\NotificationTools.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CoreAssets\" />
-    <Folder Include="CoreAssets\Globals\" />
-    <Folder Include="CoreAssets\IOS\" />
-    <Folder Include="CoreAssets\Android\" />
-    <Folder Include="CoreAssets\Shared\" />
-    <Folder Include="CoreAssets\Shared\Tools\" />
-    <Folder Include="CoreAssets\Globals\Data\" />
-    <Folder Include="CoreAssets\Globals\Classes\" />
-    <Folder Include="CoreAssets\Shared\Images\" />
-    <Folder Include="CoreAssets\Shared\Tools\EngineTools\" />
+    <Folder Include="CoreAssets\GameTest\" />
+    <Folder Include="CoreAssets\Classes\" />
+    <Folder Include="CoreAssets\Data\" />
+    <Folder Include="CoreAssets\Images\" />
+    <Folder Include="CoreAssets\HTMLEngine\" />
+    <Folder Include="CoreAssets\Classes\Tools\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CoreAssets\Data\AlarmSchedule.xml" />
+    <None Include="packages.config" />
+    <None Include="Helpers\CrossPushNotificationListener.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Xamarin.Forms.Core">
+      <HintPath>..\packages\Xamarin.Forms.2.3.4.247\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Platform">
+      <HintPath>..\packages\Xamarin.Forms.2.3.4.247\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Xaml">
+      <HintPath>..\packages\Xamarin.Forms.2.3.4.247\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Xaml.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="PushNotification.Plugin.Abstractions">
+      <HintPath>..\packages\Xam.Plugin.PushNotification.1.2.4\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\PushNotification.Plugin.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="PushNotification.Plugin">
+      <HintPath>..\packages\Xam.Plugin.PushNotification.1.2.4\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\PushNotification.Plugin.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
 </Project>
